ADM-363 optimize the logic of concurrent api requests.